[tool.poetry]
name = "firefly-algorithm"
version = "0.1.0"
description = ""
authors = ["Alessandro Aguilar <alessandro.aguilar.chombo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
